<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天气预报</string>
    <string name="hello_world">Hello world!</string>
    
    
    <!-- 一周缩写 -->
    <string name="week_one">一</string>
    <string name="week_two">二</string>
    <string name="week_three">三</string>
    <string name="week_four">四</string>
    <string name="week_five">五</string>
    <string name="week_six">六</string>
    <string name="week_sun">日</string>

</resources>