<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
            <TextView
                android:id="@+id/week_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_one"
                android:textColor="@color/gainsboro" />

            <TextView
                android:id="@+id/week_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/week_two"
                android:textColor="@color/gainsboro" />

            <TextView
                android:id="@+id/week_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/week_three"
                android:textColor="@color/gainsboro" />

            <TextView
                android:id="@+id/week_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/week_four"
                android:textColor="@color/gainsboro" />

            <TextView
                android:id="@+id/week_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/week_five"
                android:textColor="@color/gainsboro" />

            <TextView
                android:id="@+id/week_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/week_six"
                android:textColor="@color/gainsboro" />

            <TextView
                android:id="@+id/week_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/week_sun"
                android:textColor="@color/gainsboro" />

</LinearLayout>
